added a small project by the help by chatGPT

--- a/Section_10_Ultimate_Dice_Game/10-indexByInstructor.html
+++ b/Section_10_Ultimate_Dice_Game/10-indexByInstructor.html
@@ -48,6 +48,7 @@
             let rNumber = Math.floor(Math.random() * num) + 1;
             return rNumber + " " + char;
         }
+        // adding some functions here
     </script>
 </body>
 </html>
