--- a/Section_10_Ultimate_Dice_Game/10-indexByInstructor.html
+++ b/Section_10_Ultimate_Dice_Game/10-indexByInstructor.html
@@ -1,54 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ultimate Dice Game by Instructor</title>
     <style>
-        #player1, #player2{
-            display: inline-block;
-            width: 200px;
-            height: 140px;
-            border: 1px solid black;
-            padding: 5px;
-            margin: 25px;
-            text-align: center;
-            font-size: 7em;
-        }
-        #output{
-            width: 550px;
-            text-align: center;
-            font-size: 2em;
-        }
-        button{
-            padding: 10px;
-            text-align: center;
-            width: 550px;
-        }
+      .output {
+        width: 450px;
+        text-align: center;
+        font-size: 2em;
+      }
+      button {
+        padding: 10px;
+        text-align: center;
+        width: 490px;
+      }
+      .dicer{
+        border: 1px solid black;
+        width: 100px;
+        height: 100px;
+        padding: 2px;
+        border-radius: 10px;
+      }
+      .white{
+        background-color: white;
+      }
+      .black{
+        background-color: black;
+      }
+      .dot {
+        height: 25px;
+        width: 25px;
+        border-radius: 50%;
+        display: inline-block;
+        margin: 2px;
+      }
+      .viewer{
+        display: inline-block;
+        width: 230px;
+        height: 150px;
+        border: 1px solid black;
+        padding: 5px;
+      }
+      .namer{
+        display: inline-block;
+        font-family: cursive;
+        font-size: 20px;
+        margin-bottom: 10px;
+      }
+      .gamearea{
+        width: 900px;
+        height: 210px;
+      }
     </style>
-</head>
-<body>
-    <div class="gameArea">
-        <div id="output"></div>
-        <div id="player1"></div>
-        <div id="player2"></div>
+  </head>
+  <body>
+    <div class="gamearea">
+        <div class="output">
+          <div>
+            Roll the Dice ??
+          </div>
+        </div>
+        <div class="viewer">
+          <span class="namer">Player 1</span>
+          <span id="player1"></span>
+        </div>
+        <div class="viewer">
+          <span class="namer">Player 2</span>
+          <span id="player2"></span>
+        </div>
     </div>
     <button type="button">Roll</button>
     <script>
-        const button = document.querySelector("button");
-        const player1 = document.querySelector("#player1");
-        const player2 = document.querySelector("#player2");
-        const output = document.querySelector("#output");
-        button.addEventListener("click", function(){
-            
-        });
+      const button = document.querySelector("button");
+      const output = document.querySelector(".output");
+      const player1Dice = document.querySelector("#player1");
+      const player2Dice = document.querySelector("#player2");
+      const dice = [[5],[1,9],[1,5,9],[1,3,7,9],[1,3,5,7,9],[1,3,4,6,7,9]];
+      button.addEventListener("click", function () {
+        let rollDice = roll(6);
+        console.log(rollDice);
+        let holder = builder(rollDice);
+        if(player1Dice.children[0]){ player1Dice.children[0].remove();}
+        player1Dice.appendChild(holder);
+      });
 
-        function roll(num){
-            let rNumber = Math.floor(Math.random() * num) + 1;
-            return rNumber + " " + char;
+      function builder(num){
+        let div = document.createElement("div");
+        let dieArray = dice[num - 1];
+        console.log(dieArray);
+        for(let x = 1;x<10;x++){
+          let span = document.createElement("div");
+          span.setAttribute("class","dot");
+          if(dieArray.includes(x)){ 
+            span.classList.add("black"); 
+          }else { 
+            span.classList.add("white"); 
+          }
+          div.appendChild(span);
         }
-        // adding some functions here
+        div.setAttribute("class","dicer");
+        return div;
+      }  
+      function roll(num) {
+        let rNumber = Math.floor(Math.random() * num) + 1;
+        return rNumber;
+      }
+      // adding some functions here
     </script>
-</body>
+  </body>
 </html>
