tweak the code a little

--- a/Section_10_Ultimate_Dice_Game/10-indexByInstructor.html
+++ b/Section_10_Ultimate_Dice_Game/10-indexByInstructor.html
@@ -42,6 +42,8 @@
         height: 150px;
         border: 1px solid black;
         padding: 5px;
+        /*overflow: hidden;*/
+        vertical-align: top;
       }
       .namer{
         display: inline-block;
