tweak in the the accordion mini project

--- a/Section_15_JS_Accordion/15-indexByInstructor.html
+++ b/Section_15_JS_Accordion/15-indexByInstructor.html
@@ -60,6 +60,7 @@
         console.log(e.target.parentElement);
         accordion.forEach(function (ele) {
           if (e.target.parentElement === ele) {
+            console.log(ele);
             ele.classList.toggle("active");
           } else {
             ele.classList.remove("active");
