15-JS-Accordion Project completed and 16-Combination-Guesser Game Project some code added

--- a/Section_15_JS_Accordion/15-indexBySelf.html
+++ b/Section_15_JS_Accordion/15-indexBySelf.html
@@ -59,9 +59,9 @@
         accordion.forEach(function (ele) {
           console.log(ele);
           if (e.target.parentElement == ele) {
-            ele.classList.toggle(".active");
+            ele.classList.toggle("active");
           } else {
-            ele.classList.remove(".active");
+            ele.classList.remove("active");
           }
         });
       }
