section-16-JS-Combination game completed

--- a/Section_16_JS_Combination_guesser/16-indexByInstructor.html
+++ b/Section_16_JS_Combination_guesser/16-indexByInstructor.html
@@ -5,11 +5,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App by Instructor Approach</title>
+    <style>
+        .numb{
+            font-size: 2em;
+        }
+        button{
+            margin-bottom: 15px;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="message">Guess Combo</div>
+    <div class="game"></div>
+    <button type="button">Start</button>
+    <div>Instruction: Guess the combo, blue means higher and red means lower. Try to solve it in as little guesses as possible.</div>
     <script>
-        
+        const gameArea = document.querySelector(".game");
+        const button = document.querySelector("button");
+        const message = document.querySelector(".message");
+        let score = 0;
+        let gamePlay = false;
+        button.addEventListener("click",function(){
+            if(!gamePlay){
+                gamePlay = true;
+                score = 0;
+                gameArea.innerHTML ="";
+                maker();
+                message.innerHTML = "Guess the Combo";
+                button.innerHTML = "Check Combo";
+            }else {
+                console.log("checker");
+                score++;
+                message.innerHTML = "Guesses : "+score;
+                const numbers = document.querySelectorAll(".numb");
+                let winCondition = 0;
+                for(let i=0;i<numbers.length;i++){
+                    if(numbers[i].value == numbers[i].correct){
+                        numbers[i].style.backgroundColor = "green";
+                        numbers[i].style.color = "white";
+                        console.log("Match");
+                        winCondition++;
+                    }else{
+                        let color = (numbers[i].value < numbers[i].correct)? "Blue" : "Red";
+                        numbers[i].style.backgroundColor = color;
+                        numbers[i].style.color = "black";
+                        console.log("Not Match");
+                    }
+                    if(winCondition == numbers.length){
+                        console.log("game over");
+                        gameEND();
+                    }
+                }
+            }
+        });
+
+        function gameEND(){
+            message.innerHTML = "You solved the combo in "+score+ " guesses.";
+            button.innerHTML = "Restart Game";
+            gamePlay = false;
+        }
+        function maker(){
+            for(let x=0;x<4;x++){
+                let el = document.createElement("input");
+                el.setAttribute("type","number");
+                el.max = 9;
+                el.min = 0;
+                el.size = 1;
+                el.style.width = "40px";
+                el.classList.add("numb");
+                el.value = 0;
+                el.order = x;
+                el.correct = Math.floor(Math.random() * 10);
+                gameArea.appendChild(el);
+            }
+        }
     </script>
 </body>
 </html>
