--- a/Section_18_Countdown_Timer/18-indexBySelf.html
+++ b/Section_18_Countdown_Timer/18-indexBySelf.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyVersion-Countdown_Timer</title>
 </head>
+
 <body>
-    
+    <input type="date">
 
     <script>
-        
+
     </script>
 </body>
+
 </html>
