some more tweak for checking gitbash integration with github

--- a/Section_18_Countdown_Timer/18-indexBySelf.html
+++ b/Section_18_Countdown_Timer/18-indexBySelf.html
@@ -49,6 +49,7 @@
 
 <body>
     <!-- there are some changes -->
+    <!-- there are some more changes -->
     <h1>Countdown Clock</h1>
     <div id="clockdiv">
         <div>
